--- a/admin-app/src/App.css
+++ b/admin-app/src/App.css
@@ -1,11 +1,53 @@
+:root {
+    --color-212529: #212529;
+    --color-ffd333: #ffd333;
+    --color-47ad24: #47ad24;
+    --color-e52e2e: #e52e2e;
+    --color-828599: #828599;
+    --color-3d464d: #3d464d;
+    --color-ffffff: #ffffff;
+}
+
 .green {
-    color: green;
+    color: var(--color-47ad24);
+    font-size: 16px;
+    font-family: Roboto !important;
 }
 
 .red {
-    color: red;
+    color: var(--color-e52e2e);
+    font-size: 16px;
+    font-family: Roboto !important;
 }
 
 .quill {
     background-color: white;
+}
+
+.form-control {
+    box-shadow: none;
+    background-color: var(--color-ffffff);
+}
+
+.title{
+    font-size: 38px;
+    font-family: Roboto !important;
+    color: var(--color-212529);
+}
+
+.sub-title{
+    font-size: 30px;
+    font-family: Roboto !important;
+    color: var(--color-212529);
+}
+
+.desc {
+    font-size: 16px;
+    font-family: Roboto !important;
+    color: var(--color-828599);
+}
+
+.change {
+    font-size: 16px;
+    font-family: Roboto !important;
 }
