--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,7 @@
   --color-131921 : #131921;
   --color-3b4149 : #3b4149;
   --color-febd69 : #febd69;
+  --color-d5d52e : #d5d52e;
   --color-232f3e : #232f3e;
   --color-bf4800 : #bf4800;
   --color-f5f7f7 : #f5f7f7;
@@ -701,6 +702,17 @@ footer:not(:first-child) {
   }
 
   .signup:hover {
+    background-color: var(--color-131921);
+    color: white;
+  }
+
+  .login {
+    background-color: var(--color-d5d52e );
+    color: var(--color-131921);
+    border: none;
+  }
+
+  .login:hover {
     background-color: var(--color-131921);
     color: white;
   }
