--- a/client/src/App.css
+++ b/client/src/App.css
@@ -980,3 +980,14 @@ footer:not(:first-child) {
   background-color: #f1f1f1;
 }
 /* Dropdown button Ends Here */
+
+/* Orders Start Here */
+
+.myOrders {
+  text-decoration: none;
+  color: #333;
+  padding: 8px 16px;
+  display: block;
+}
+
+/* Orders end Here */
