--- a/client/src/App.css
+++ b/client/src/App.css
@@ -957,6 +957,7 @@ footer:not(:first-child) {
   border: 1px solid #ccc;
   padding: 0px;
   z-index: 1;
+  cursor: pointer;
 }
 
 /* Show the dropdown menu when the parent dropdown is hovered */
